[gd_scene load_steps=5 format=2]

[ext_resource path="res://elements/MusicInfo.gd" type="Script" id=1]
[ext_resource path="res://Img/Music.png" type="Texture" id=2]
[ext_resource path="res://elements/Thicket.tscn" type="PackedScene" id=3]
[ext_resource path="res://elements/OpenSeed.tscn" type="PackedScene" id=4]

[node name="MusicInfo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -830.0
rect_min_size = Vector2( 500, 720 )
rect_clip_content = true
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="trackImage" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -169.0
margin_top = 16.0
margin_right = 172.0
margin_bottom = 216.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="trackpost" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 272.0
margin_right = -5.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]
use_threads = true

[node name="buttons" type="HBoxContainer" parent="."]
visible = false
anchor_right = 1.0
margin_left = 1.16635
margin_top = 233.652
margin_right = 1.16635
margin_bottom = 264.652
custom_constants/separation = 30
alignment = 1

[node name="Like" type="Button" parent="buttons"]
margin_left = 225.0
margin_right = 300.0
margin_bottom = 31.0
rect_min_size = Vector2( 75, 0 )
text = "Like"

[node name="Favorite" type="Button" parent="buttons"]
margin_left = 330.0
margin_right = 405.0
margin_bottom = 31.0
rect_min_size = Vector2( 75, 0 )
text = "Favorite"

[node name="Download" type="Button" parent="buttons"]
margin_left = 435.0
margin_right = 510.0
margin_bottom = 31.0
rect_min_size = Vector2( 75, 0 )
disabled = true
text = "Tip"

[node name="Thicket" parent="." instance=ExtResource( 3 )]

[node name="OpenSeed" parent="." instance=ExtResource( 4 )]
[connection signal="postview" from="." to="." method="_on_MusicInfo_postview"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="buttons/Like" to="." method="_on_Like_pressed"]
[connection signal="pressed" from="buttons/Favorite" to="." method="_on_Favorite_pressed"]
[connection signal="pressed" from="buttons/Download" to="." method="_on_Download_pressed"]
